--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles/main.css">
   <script src="scripts/app.js" charset="utf-8"></script>
-  <title>Pac-Mermaid</title>
+  <title>Pac-Man</title>
 </head>
 <body>
   <button>Start Game</button>
