--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <button>Start Game</button>
   <button>Reset Game</button>
   <button>Play Music</button>
+  <p>Score: <span id="score-text"></span></p>
   <div class ="grid-wrapper">
     <div class="grid"></div>
   </div>
