--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <button>Start Game</button>
   <button>Reset Game</button>
-  <button>Play Music</button>
+  <button class="music-button">Play Music</button>
   <p>Score: <span id="score-text"></span></p>
   <div class ="grid-wrapper">
     <div class="grid"></div>
