--- a/index.html
+++ b/index.html
@@ -8,13 +8,26 @@
   <title>Pac-Man</title>
 </head>
 <body>
-  <button>Start Game</button>
-  <button>Reset Game</button>
-  <button class="music-button">Play Music</button>
-  <p>Score: <span id="score-text"></span></p>
-  <div class ="grid-wrapper">
-    <div class="grid"></div>
-  </div>
+<div class="main-wrapper">
+<header>
+  <h1>My Little Mermaid Pacman</h1>
+</header>
+<main>
+  <section class="left-side">
+      <button class="start-button">Start Game</button>
+      <button class="reset-button">Reset Game</button>
+      <button class="music-button">Play Music</button>
+      <p>Score: <span id="score-text"></span></p>
+  </section>
+  <section class="right-side">
+      <div class ="grid-wrapper">
+      <div class="grid"></div>
+      </div>
+  </section>
+</div>
   <audio id="audio"></audio>
+</div>
+</main>
+<footer></footer>
 </body>
 </html>
