updated ghost movement

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 <div class="main-wrapper">
 <header>
-  <h1>My Little Mermaid Pacman</h1>
+  <h1>Little Mermaid Pacman</h1>
   <button class="start-button">Start Game</button>
       <button class="reset-button">Reset Game</button>
       <button class="music-button">Play Music</button>
