--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
       <button class="music-button">Play Music</button>
         <p>Score: <span id="score-text"></span></p>
         <p>Lives: <span id="lives-left">3</span></p>
-        <p>Timer: <span id="timer">2.30</span></p>
+        <p>Timer: <span id="timer-display">60</span></p>
+        <p><span id="your-score"></span></p>
 </header>
 <main>
   <section class="left-side">
