--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Nerko+One&display=swap" rel="stylesheet"> 
   <link rel="stylesheet" href="styles/main.css">
   <script src="scripts/app.js" charset="utf-8"></script>
   <title>Pac-Man</title>
@@ -29,9 +29,9 @@
       </section>
       <section class="right-side">
         <div class="buttons">
-          <button id="start-button">Start Game</button>
+          <img src="assets/shell-start.png" class="shell-button">
           <button id="reset-button">Reset Game</button>
-          <button id="music-button">Play Music</button>
+          <img src="assets/sebastian.png" class="sebastian">
        </div>
         <div class="wood-plank">
           <p>Score: <span id="score-text"></span></p>
