updated title and tidied up css

--- a/index.html
+++ b/index.html
@@ -47,10 +47,11 @@
           <p><span id="your-score"></span></p>
           <button id="again-button" class="try-button"><span id="try-again"></span></span></button>
       </div>
-
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <p>&copy; Elsie Down</p>
+    </footer>
   </div>
   <audio id="audio"></audio>
 </body>
