Added gifs to css

--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
           <p>Click the Shell To Begin</p>
           <h4 class="key">Key:</h4>
               <div class="key"><img src="assets/shell.png" class="shell-image"><p> 20 points</p></div>
-              <div class="key"><img src="assets/starfish.png" class="starfish-image"><p> 50 points</p></div>
+              <div class="key"><img src="https://media.giphy.com/media/eBb20laqXRFsOaaXcV/giphy.gif" class="starfish-image"><p> 50 points</p></div>
               <div class="key"><img src="assets/water-portal.png" class="water-portal"><p>Escape Through the Water Portal to the Other Side</p></div>
         </div>
       </section>
       <section class="middle-section">
         <div class="controls">
           <div>
-            <img src="assets/shell-start.png" class="shell-button">
+            <img src="https://media.giphy.com/media/PPSU1YIeiudkiF3pax/giphy.gif" class="shell-button">
             <p>Start<br>Game</p>
           </div>
           <div>
@@ -37,7 +37,7 @@
             <p>Play<br>Music</p>
           </div>
           <div>
-            <img src="assets/starfish.png" class="reset-button">
+            <img src="https://media.giphy.com/media/eBb20laqXRFsOaaXcV/giphy.gif" class="reset-button">
             <p>Reset<br>Game</p>
           </div>
         </div>
