--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
               <div class="key"><img src="assets/water-portal.png" class="water-portal"><p>Escape Through the Water Portal to the Other Side</p></div>
         </div>
       </section>
-      <section class="middle-section">
+      <section class="middle-section music-class">
         <div class="controls">
           <div>
             <img src="https://media.giphy.com/media/PPSU1YIeiudkiF3pax/giphy.gif" class="shell-button">
