updated audio and flexbox

--- a/index.html
+++ b/index.html
@@ -18,15 +18,24 @@
       <section class="left-side">
         <div class="scroll-text">
           <h4>Instructions</h4>
-          <p>Ariel must collect all the Shells before the time runs out! Watch out for Ursula!</p>
-          <p>Click the Shell To Begin</p>
+            <p>Ariel must collect all the Shells before the time runs out! Watch out for Ursula!</p>
+            <p>Click the Shell To Begin</p>
           <h4 class="key">Key:</h4>
-              <div class="key"><img src="assets/shell.png" class="shell-image"><p> 20 points</p></div>
-              <div class="key"><img src="https://media.giphy.com/media/eBb20laqXRFsOaaXcV/giphy.gif" class="starfish-image"><p> 50 points</p></div>
-              <div class="key"><img src="assets/water-portal.png" class="water-portal"><p>Escape Through the Water Portal to the Other Side</p></div>
+              <div class="key">
+                <img src="assets/shell.png" class="shell-image">
+                <p> 20 points</p>
+              </div>
+              <div class="key">
+                <img src="https://media.giphy.com/media/eBb20laqXRFsOaaXcV/giphy.gif" class="starfish-image">
+                <p> 50 points</p>
+              </div>
+               <div class="key">
+                 <img src="assets/water-portal.png" class="water-portal">
+                 <p>Escape Through the Water Portal to the Other Side</p>
+                </div>
         </div>
       </section>
-      <section class="middle-section music-class">
+      <section class="middle-section bubble-class">
         <div class="controls">
           <div>
             <img src="https://media.giphy.com/media/PPSU1YIeiudkiF3pax/giphy.gif" class="shell-button">
@@ -47,7 +56,7 @@
           <p>Timer: <span id="timer-display">60</span></p>
         </div>
         <div class ="grid-wrapper">
-        <div class="grid"></div>
+          <div class="grid"></div>
         </div>
       </section>
       <section class="right-side">
