--- a/index.html
+++ b/index.html
@@ -16,11 +16,12 @@
     </header>
     <main>
       <section class="left-side">
-        <div class="scroll-text">
+        <div class="scroll-one">
+        <div class="scroll-text-one">
           <h4>Instructions</h4>
             <p>Ariel must collect all the Shells before the time runs out! Watch out for Ursula!</p>
             <p>Click the Shell To Begin</p>
-          <h4 class="key">Key:</h4>
+          <h4>Key:</h4>
               <div class="key">
                 <img src="assets/shell.png" class="shell-image">
                 <p> 20 points</p>
@@ -33,7 +34,8 @@
                  <img src="assets/water-portal.png" class="water-portal">
                  <p>Escape Through the Water Portal to the Other Side</p>
                 </div>
-        </div>
+              </div>
+            </div>
       </section>
       <section class="middle-section bubble-class">
         <div class="controls">
@@ -60,10 +62,12 @@
         </div>
       </section>
       <section class="right-side">
-        <div class="scroll">
+        <div class="scroll-two">
+          <div class="scroll-text-two">
           <h3>Score Board</h3>
           <p><span id="your-score"></span></p>
           <button id="try-again-button" class="try-again-button"><span id="try-again-text"></span></span></button>
+          </div>
         </div>
       </section>
     </main>
