fixed overlap issues

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
       <section class="left-side">
         <div class="scroll-one">
         <div class="scroll-text-one">
-          <h4>Instructions</h4>
-            <p>Ariel must collect all the Shells before the time runs out! Watch out for Ursula!</p>
-            <p>Click the Shell To Begin</p>
-          <h4>Key:</h4>
+            <h2>Instructions</h2>
+              <p>Ariel must collect all the Shells before the time runs out! Watch out for Ursula!</p>
+              <p>Click the Shell Above To Begin</p>
+            <h3>Key:</h3>
               <div class="key">
                 <img src="assets/shell.png" class="shell-image">
                 <p> 20 points</p>
@@ -64,7 +64,7 @@
       <section class="right-side">
         <div class="scroll-two">
           <div class="scroll-text-two">
-          <h3>Score Board</h3>
+          <h2>Score Board</h2>
           <p><span id="your-score"></span></p>
           <button id="try-again-button" class="try-again-button"><span id="try-again-text"></span></span></button>
           </div>
