--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
               </div>
                <div class="key">
                  <img src="assets/water-portal.png" class="water-portal">
-                 <p>Escape Through the Water Portal to the Other Side</p>
+                 <p>Escape Through the Whirlpool to the Other Side of the Sea</p>
                 </div>
               </div>
             </div>
