--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Nerko+One&display=swap" rel="stylesheet"> 
   <link rel="stylesheet" href="styles/main.css">
   <script src="scripts/app.js" charset="utf-8"></script>
-  <title>Pac-Man</title>
+  <title>Little Mermaid Pac-Man</title>
 </head>
 <body>
   <div class="main-wrapper">
@@ -45,7 +45,7 @@
           </div>
           <div>
             <img src="assets/sebastian.png" class="sebastian-button">
-            <p>Play<br>Music</p>
+            <p>Pause & Play<br>Music</p>
           </div>
           <div>
             <img src="https://media.giphy.com/media/eBb20laqXRFsOaaXcV/giphy.gif" class="reset-button">
@@ -55,7 +55,7 @@
         <div class="wood-plank">
           <p>Score: <span id="score-text"></span></p>
           <p>Lives: <span id="lives-left">3</span></p>
-          <p>Timer: <span id="timer-display">60</span></p>
+          <p>Time: <span id="timer-display">60</span></p>
         </div>
         <div class ="grid-wrapper">
           <div class="grid"></div>
@@ -75,6 +75,6 @@
       <p>&copy; Elsie Down</p>
     </footer>
   </div>
-  <audio id="audio"></audio>
+  <audio id="start-audio"></audio>
 </body>
 </html>
