--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Nerko+One&display=swap" rel="stylesheet"> 
-  <link rel="stylesheet" href="styles/main.css">
-  <script src="scripts/app.js" charset="utf-8"></script>
+  <link rel="stylesheet" href="./styles/main.css">
+  <script src="./scripts/app.js" charset="utf-8"></script>
   <title>Little Mermaid Pac-Man</title>
 </head>
 <body>
@@ -17,13 +17,13 @@
     <main>
       <section class="left-side">
         <div class="scroll-one">
-        <div class="scroll-text-one">
+          <div class="scroll-text-one">
             <h2>Instructions</h2>
               <p>Ariel must collect all the Shells before the time runs out! Watch out for Ursula!</p>
               <p>Click the Shell Above To Begin</p>
             <h3>Key:</h3>
               <div class="key">
-                <img src="assets/shell.png" class="shell-image">
+                <img src="./assets/shell.png" class="shell-image">
                 <p> 20 points</p>
               </div>
               <div class="key">
@@ -33,9 +33,9 @@
                <div class="key">
                  <img src="assets/water-portal.png" class="water-portal">
                  <p>Escape Through the Whirlpool to the Other Side of the Sea</p>
-                </div>
               </div>
-            </div>
+          </div>
+        </div>
       </section>
       <section class="middle-section bubble-class">
         <div class="controls">
@@ -44,7 +44,7 @@
             <p>Start<br>Game</p>
           </div>
           <div>
-            <img src="assets/sebastian.png" class="sebastian-button">
+            <img src="./assets/sebastian.png" class="sebastian-button">
             <p>Pause & Play<br>Music</p>
           </div>
           <div>
@@ -64,9 +64,9 @@
       <section class="right-side">
         <div class="scroll-two">
           <div class="scroll-text-two">
-          <h2>Score Board</h2>
-          <p><span id="your-score"></span></p>
-          <button id="try-again-button" class="try-again-button"><span id="try-again-text"></span></span></button>
+            <h2>Score Board</h2>
+            <p><span id="your-score"></span></p>
+            <button id="try-again-button" class="try-again-button"><span id="try-again-text"></span></span></button>
           </div>
         </div>
       </section>
