--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <p> 50 points</p>
               </div>
                <div class="key">
-                 <img src="assets/water-portal.png" class="water-portal">
+                 <img src="assets/water-portal.png" class="water-portal-image">
                  <p>Escape Through the Whirlpool to the Other Side of the Sea</p>
               </div>
           </div>
