added in arrows

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
             <h2>Score Board</h2>
             <p><span id="your-score"></span></p>
             <button id="try-again-button" class="try-again-button"><span id="try-again-text"></span></span></button>
+            <div class="arrows-section" class="remove-arrows">Controls<br><img src="./assets/arrows.png" class="arrows"></div>
           </div>
         </div>
       </section>
